# egoman

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml
apps/api/: .pylintrc  Dockerfile  pyproject.toml  pytest.ini  tasks.py
apps/api/src/delivery/: config.py
apps/api/src/delivery/di/: auth.py  injector.py  model.py  sales.py  storage.py  users.py
apps/api/src/delivery/web/: exceptions.py
apps/api/src/delivery/web/app/: app.py  main.py
apps/api/src/delivery/web/endpoints/: auth.py  hello_world.py  model.py  sales.py  users.py
apps/api/src/delivery/web/middleware/: injector.py
apps/api/src/domains/auth/: interaces.py
apps/api/src/domains/auth/gateways/: __init__.py  auth_bearer.py  auth_handler.py
apps/api/src/domains/authentication/: entities.py  interfaces.py
apps/api/src/domains/authentication/commands/: __init__.py  authenticate_user.py
apps/api/src/domains/authentication/gateways/: __init__.py  auth_service.py  token_storage.py
apps/api/src/domains/core/: storage.py
apps/api/src/domains/core/dto/: __init__.py  base_dto.py
apps/api/src/domains/core/entities/: __init__.py  base_entity.py  identifiable_entity.py
apps/api/src/domains/core/gateways/: __init__.py  task_runner.py
apps/api/src/domains/core/mappers/: __init__.py  base_dto_mapper.py  base_entity_mapper.py
apps/api/src/domains/model/: entities.py  interfaces.py
apps/api/src/domains/model/commands/: __init__.py  predict.py
apps/api/src/domains/model/gateways/: __init__.py  model.py
apps/api/src/domains/sales/: entities.py  interfaces.py
apps/api/src/domains/sales/commands/: __init__.py  fill_sales_db.py
apps/api/src/domains/sales/gateways/: __init__.py  exceptions.py  sales_storage.py
apps/api/src/domains/sales/queries/: __init__.py  fetch_sales.py
apps/api/src/domains/users/: entities.py  interfaces.py
apps/api/src/domains/users/commands/: __init__.py  create_user.py  delete_user.py  fetch_user.py  (+3 more)
apps/api/src/gateways/auth/: auth_bearer.py  auth_handler.py
apps/api/src/gateways/authentication/: auth_service.py
apps/api/src/gateways/core/: task_runner.py
apps/api/src/gateways/database/: base.py  storage.py  tables.py
apps/api/src/gateways/model/: model.py
apps/api/src/monitoring/: logging.py
(+67 files in other folders)
