[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Siudak Maciej <maciej.siudak@nokia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydio = "^0.4.0"
sqlalchemy = "^2.0.13"
aioodbc = "^0.4.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
celery = {extras = ["redis"], version = "^5.2.7"}
asgiref = "^3.6.0"
flower = "^1.2.0"
pkce = "^1.0.3"
microsoftgraph-python = "^1.1.6"
msgraph-sdk = "^1.0.0a12"
anyio = "^3.7.0"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "*"
pylint = "^2.17.4"
invoke = "^2.1.1"
autoflake = "^2.1.1"
isort = "^5.12.0"
pylint-pytest = "^1.1.2"

[virtualenvs]
in-project = true
path = ".venv"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
