[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ghostorbiter <yuldash.yusupov.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
pydio = "^0.4.1"
aioodbc = "^0.5.0"
pytest = "^7.4.3"
pytest-httpx = "^0.27.0"
invoke = "^2.2.0"
pylint = "^3.0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
